--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <div class="content first-content">
       <div class="first-column">
-          <h2 class="title">welcome back!</h2>
+          <h2 class="title title-primary">welcome back!</h2>
           <p class="description">To keep connected with us</p>
-          <p class="description"">please login with your personal info</p>            <button class="btn">sign in</button>
+          <p class="description">please login with your personal info</p>            <button class="btn btn-primary">sign in</button>
       </div>    
       <div class="second-column">
          <h2 class="title">create account</h2>
-        <div class="social-media">
+         <div class="social-media">
             <ul class="list-social-media">
                <ul>
                   <li><a href="#">facebook</a></li>
                   <li><a href="#">google+</a></li>
                   <li><a href="#">linkedin</a></li>
                 </ul>
-        </div><!-- social media -->
+         </div><!-- social media -->
          <p class="description">or use your email for registration:</p>
           <form class="form">
             <input type="text" placeholder="Name">
@@ -32,8 +32,8 @@
             <input type="password" placeholder="Password">   
             <button class="btn">sign up</button>        
           </form>
-        </div><!-- second column -->
-      </div><!-- first content -->
+      </div><!-- second column -->
+    </div><!-- first content -->
 
     <div class="content second-content">
       <div class="first-column">
