--- a/index.html
+++ b/index.html
@@ -6,31 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/265e216f38.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
     <div class="content first-content">
       <div class="first-column">
           <h2 class="title title-primary">welcome back!</h2>
-          <p class="description">To keep connected with us</p>
-          <p class="description">please login with your personal info</p>            <button class="btn btn-primary">sign in</button>
+          <p class="description description-primary">To keep connected with us</p>
+          <p class="description description-primary">please login with your personal info</p>            <button class="btn btn-primary">sign in</button>
       </div>    
+      
       <div class="second-column">
-         <h2 class="title">create account</h2>
+         <h2 class="title title-second">create account</h2>
          <div class="social-media">
             <ul class="list-social-media">
                <ul>
-                  <li><a href="#">facebook</a></li>
-                  <li><a href="#">google+</a></li>
-                  <li><a href="#">linkedin</a></li>
+                  <li class='item-social-media'>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  </li>
+                  <li class='item-social-media'>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                  </li>
+                  <li class='item-social-media'>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </li>
                 </ul>
          </div><!-- social media -->
-         <p class="description">or use your email for registration:</p>
+         <p class="description description-second">or use your email for registration:</p>
           <form class="form">
             <input type="text" placeholder="Name">
             <input type="email" placeholder="Email">
             <input type="password" placeholder="Password">   
-            <button class="btn">sign up</button>        
+            <button class="btn btn-second">sign up</button>        
           </form>
       </div><!-- second column -->
     </div><!-- first content -->
@@ -40,7 +48,7 @@
           <h2 class="title">hello, friend!</h2>
           <p class="description">Enter your personal details</p>
           <p class="description">and start journey with us</p>
-          <button class="btn">sign up</button>
+          <button class="btn btn-second">sign up</button>
       </div>
         <div class="second-column">
           <h2 class="title">sign in to developer</h2>
@@ -57,7 +65,7 @@
              <input type="email" placeholder="Email">
              <input type="password" placeholder="Password">
              <a class="password" href="#">forgot your password?</a>
-             <button class="btn">sign in</button>
+             <button class="btn btn-second">sign in</button>
            </form>
       </div><!-- second column -->
     </div><!-- second-content -->
