--- a/index.html
+++ b/index.html
@@ -22,22 +22,38 @@
          <div class="social-media">
             <ul class="list-social-media">
                <ul>
+                <a class='link-social-media' href='#'>
                   <li class='item-social-media'>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <i class="fab fa-facebook-f"></i>
                   </li>
+                </a>
+                <a class='link-social-media' href='#'>
                   <li class='item-social-media'>
-                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                    <i class="fab fa-google-plus-g"></i>
                   </li>
+                </a>
+                <a class='link-social-media' href='#'>
                   <li class='item-social-media'>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <i class="fab fa-linkedin-in"></i>
                   </li>
+                </a>
                 </ul>
          </div><!-- social media -->
          <p class="description description-second">or use your email for registration:</p>
           <form class="form">
-            <input type="text" placeholder="Name">
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">   
+            <label class='label-input' for="">
+              <i class='far fa-user  icon-modify'></i>
+              <input type="text" placeholder="Name">
+            </label>
+            <label class='label-input' for="">
+              <i class='far fa-envelope icon-modify'></i>
+              <input type="email" placeholder="Email">
+            </label>
+            <label class='label-input' for="">
+              <i class='fas fa-lock icon-modify'></i>
+              <input type="password" placeholder="Password"> 
+            </label>
+           
             <button class="btn btn-second">sign up</button>        
           </form>
       </div><!-- second column -->
@@ -45,13 +61,13 @@
 
     <div class="content second-content">
       <div class="first-column">
-          <h2 class="title">hello, friend!</h2>
-          <p class="description">Enter your personal details</p>
-          <p class="description">and start journey with us</p>
-          <button class="btn btn-second">sign up</button>
+          <h2 class="title ">hello, friend!</h2>
+          <p class="description ">Enter your personal details</p>
+          <p class="description ">and start journey with us</p>
+          <button class="btn btn-primary">sign up</button>
       </div>
         <div class="second-column">
-          <h2 class="title">sign in to developer</h2>
+          <h2 class="title ">sign in to developer</h2>
           <div class="social-media">
             <ul class="list-social-media">
               <ul>
@@ -60,7 +76,7 @@
                 <li><a href="#">linkedin</a></li>
               </ul>
         </div><!-- social media -->
-           <p class="description">or use your email account:</p>
+           <p class="description"> or use your email account:</p>
             <form class="form">
              <input type="email" placeholder="Email">
              <input type="password" placeholder="Password">
