--- a/index.html
+++ b/index.html
@@ -62,28 +62,51 @@
 
     <div class="content second-content">
       <div class="first-column">
-          <h2 class="title ">hello, friend!</h2>
-          <p class="description ">Enter your personal details</p>
-          <p class="description ">and start journey with us</p>
+          <h2 class="title title-primary">hello, friend!</h2>
+          <p class="description description-primary ">Enter your personal details</p>
+          <p class="description description-primary">and start journey with us</p>
           <button class="btn btn-primary">sign up</button>
       </div>
         <div class="second-column">
-          <h2 class="title ">sign in to developer</h2>
+          <h2 class="title title-second ">sign in to developer</h2>
           <div class="social-media">
-            <ul class="list-social-media">
-              <ul>
-                <li><a href="#">facebook</a></li>
-                <li><a href="#">google+</a></li>
-                <li><a href="#">linkedin</a></li>
-              </ul>
+                 <ul class="list-social-media">
+                    <a class='link-social-media' href='#'>
+                      <li class='item-social-media'>
+                        <i class="fab fa-facebook-f"></i>
+                      </li>
+                    </a>
+                    <a class='link-social-media' href='#'>
+                      <li class='item-social-media'>
+                        <i class="fab fa-google-plus-g"></i>
+                      </li>
+                    </a>
+                    <a class='link-social-media' href='#'>
+                      <li class='item-social-media'>
+                        <i class="fab fa-linkedin-in"></i>
+                        
+                      </li>
+                    </a>
+                </ul>
         </div><!-- social media -->
-           <p class="description"> or use your email account:</p>
-            <form class="form">
-             <input type="email" placeholder="Email">
-             <input type="password" placeholder="Password">
-             <a class="password" href="#">forgot your password?</a>
-             <button class="btn btn-second">sign in</button>
+           <p class="description description-second"> or use your email account:</p>
+           <form class="form">
+
+            <label class='label-input' for="">
+                <i class='far fa-envelope icon-modify'></i>
+                <input type="email" placeholder="Email">
+              </label>
+              <label class='label-input' for="">
+                <i class='fas fa-lock icon-modify'></i>
+                <input type="password" placeholder="Password"> 
+              </label>
+
+              <a class="password" href="#"> forgot your password? </a>
+              <button class="btn btn-second">sign in</button>      
+
            </form>
+    
+   
       </div><!-- second column -->
     </div><!-- second-content -->
   </div>
