update_pre-keyframe

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <input type="password" placeholder="Password"> 
             </label>
            
-            <button class="btn btn-second">sign up</button>        
+            <button id='signup' class="btn btn-second">sign up</button>        
           </form>
       </div><!-- second column -->
     </div><!-- first content -->
@@ -102,7 +102,7 @@
               </label>
 
               <a class="password" href="#"> forgot your password? </a>
-              <button class="btn btn-second">sign in</button>      
+              <button id='signin' class="btn btn-second">sign in</button>      
 
            </form>
     
@@ -111,7 +111,7 @@
     </div><!-- second-content -->
   </div>
 
-  <script src="js/app.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 </html>
